--- a/index.html
+++ b/index.html
@@ -1,93 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>Business Portfolio Info</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background-color: #f9f9f9;
-    }
-    .container {
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 20px;
-      background-color: #fff;
-      max-width: 800px;
-      margin: auto;
-    }
-    .top-section {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .business-header {
-      display: flex;
-      align-items: center;
-    }
-    .logo {
-      background-color: #b58dd7;
-      width: 60px;
-      height: 60px;
-      border-radius: 8px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 30px;
-      font-weight: bold;
-      margin-right: 15px;
-    }
-    .info-label {
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    .edit-button, .delete-button {
-      padding: 8px 14px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background-color: #eee;
-      cursor: pointer;
-    }
-    .section {
-      margin-top: 30px;
-    }
-    .section-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hail Cars Shops</title>
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Tajawal', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to bottom, #b2e8e0, #ffffff);
+            color: #333;
+            direction: rtl;
+        }
+        .container {
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 30px;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.15);
+        }
+        .header {
+            text-align: center;
+            color: #1a3c34;
+            margin-bottom: 30px;
+        }
+        .header h1 {
+            font-size: 3em;
+            margin: 10px 0;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+        }
+        .logo {
+            max-width: 250px;
+            margin: 0 auto 20px;
+            display: block;
+            transition: transform 0.3s ease;
+        }
+        .logo:hover {
+            transform: scale(1.05);
+        }
+        .details {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        .details p {
+            font-size: 1.2em;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            background-color: #f9f9f9;
+            padding: 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .details p:hover {
+            background-color: #e6f7ff;
+        }
+        .details strong {
+            color: #1a3c34;
+        }
+        .contact {
+            background-color: #e6f7ff;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 20px;
+            text-align: center;
+        }
+        .contact a {
+            color: #25d366;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.2em;
+            padding: 10px 20px;
+            background-color: #fff;
+            border-radius: 25px;
+            display: inline-block;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        .contact a:hover {
+            background-color: #25d366;
+            color: #fff;
+            transform: translateY(-2px);
+        }
+        .icon {
+            font-size: 1.5em;
+            color: #1a3c34;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="top-section">
-      <div class="business-header">
-        <div class="logo">C</div>
-        <div>
-          <h2>Cars Shop</h2>
-
+    <div class="container">
+        <div class="header">
+            <img src="logo.png" alt="Hail Cars Shops" class="logo">
+            <h1>Hail Cars Shops</h1>
         </div>
-      </div>
+        <div class="details">
+            <p><span class="icon">📍</span> <strong>العنوان:</st> Hail KING FAHAD ST 55426</p>
+            <p><span class="icon">📞</span> <strong>رقم الهاتف:</strong+96655493998874</p>
+            <p><span class="icon">🚚</span> <strong>وصف النشاط التجاري:</strong> Hail Cars Shops يقدم افضل الخدمات في عالم السيارات</p>
+        </div>
+        <div class="contact">
+            <p><strong>للتواصل عبر واتساب:</strong> <a href="https://wa.m+96655493998874" target="_blank">+966530947974</a></p>
+        </div>
     </div>
-
-    <div class="section">
-      <div class="section-header">
-        <h3>Business details</h3>
-      </div>
-      <div>
-        <p class="info-label">Legal business name</p>
-        <p>Cars Shop.</p>
-
-        <p class="info-label">Address</p>
-        <p>riydah kafd kafd 22013 st</p>
-
-        <p class="info-label">Business phone</p>
-        <p>+966 55 493 9988</p>
-
-      </div>
-    </div>
-  </div>
 </body>
 </html>
