--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hail Cars Shops</title>
+    <title>EVOLUX</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -96,13 +96,13 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="logo.png" alt="Hail Cars Shops" class="logo">
-            <h1>Hail Cars Shops</h1>
+            <img src="logo.png" alt="EVOLUX" class="logo">
+            <h1>EVOLUX</h1>
         </div>
         <div class="details">
             <p><span class="icon">📍</span> <strong>العنوان:</st> Hail KING FAHAD ST 55426</p>
             <p><span class="icon">📞</span> <strong>رقم الهاتف:</strong+96655493998874</p>
-            <p><span class="icon">🚚</span> <strong>وصف النشاط التجاري:</strong> Hail Cars Shops يقدم افضل الخدمات في عالم السيارات</p>
+            <p><span class="icon">🚚</span> <strong>وصف النشاط التجاري:</strong> EVOLUX يقدم افضل الخدمات في عالم السيارات</p>
         </div>
         <div class="contact">
             <p><strong>للتواصل عبر واتساب:</strong> <a href="https://wa.m+96655493998874" target="_blank">+966530947974</a></p>
