--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         </div>
         <div class="details">
             <p><span class="icon">📍</span> <strong>العنوان:</st> Hail KING FAHAD ST 55426</p>
-            <p><span class="icon">📞</span> <strong>رقم الهاتف:</strong+96655493998874</p>
+            <p><span class="icon">📞</span> <strong>رقم الهاتف:+966530464634</strong</p>
             <p><span class="icon">🚚</span> <strong>وصف النشاط التجاري:</strong> EVOLUX يقدم افضل الخدمات في عالم السيارات</p>
         </div>
         <div class="contact">
-            <p><strong>للتواصل عبر واتساب:</strong> <a href="https://wa.m+96655493998874" target="_blank">+966530947974</a></p>
+            <p><strong>للتواصل عبر واتساب:</strong> <a href="https://wa.me/966530464634" target="_blank">+966530464634</a></p>
         </div>
     </div>
 </body>
