--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <h1>EVOLUX</h1>
         </div>
         <div class="details">
-            <p><span class="icon">📍</span> <strong>العنوان:</st> Hail KING FAHAD ST 55426</p>
-            <p><span class="icon">📞</span> <strong>رقم الهاتف:+966530464634</strong</p>
+            <p><span class="icon">📍</span> <strong>العنوان:</st> Hail sabbah 2nd Street 55045</p>
+            <p><span class="icon">📞</span> <strong>رقم الهاتف: 966530464634</strong</p>
             <p><span class="icon">🚚</span> <strong>وصف النشاط التجاري:</strong> EVOLUX يقدم افضل الخدمات في عالم السيارات</p>
         </div>
         <div class="contact">
